Parkour Level Design
Added the Level Design for the Parkour Zone

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -170,7 +170,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Developers/JoseMiguelRuizMata/Level_Design
+ContentBrowserDrawer.SelectedPaths=/Game/PaulAnds/BluePrints
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -188,9 +188,24 @@ WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
+PreviewMaterial="\"Object\" "
+Material="\"Object\" "
+MaterialInterface="\"Object\" "
+MaterialExpression="\"Object\" "
+MaterialExpressionScalarParameter="\"Object\" "
+MaterialExpressionParameter="\"Object\" "
+MaterialExpressionStaticBoolParameter="\"Object\" "
+MaterialExpressionAdd="\"Object\" "
+MaterialExpressionTextureCoordinate="\"Object\" "
+MaterialExpressionNoise="\"Object\" "
+MaterialExpressionAppendVector="\"Object\" "
+MaterialExpressionMultiply="\"Object\" "
+MaterialExpressionVectorParameter="\"Object\" "
+Actor="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/PaulAnds/BluePrints/BP_MovingPlat.BP_MovingPlat
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -206,10 +221,13 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [ContentBrowserRecent]
-MRUItem0=/Game/_Developers/JoseMiguelRuizMata/Level_Design/Parkour_Design
-MRUItem1=/Game/_Developers/JoseMiguelRuizMata/Level_Design/Labyrinth_Design
-MRUItem2=/Game/_Developers/JoseMiguelRuizMata/Level_Design/CelestialSearch_LevelDesign
-MRUItem3=/Game/PaulAnds/PlatformTesting
+MRUItem0=/Game/PaulAnds/BluePrints/BP_MovingPlat4
+MRUItem1=/Game/PaulAnds/BluePrints/BP_MovingPlat
+MRUItem2=/Game/_Developers/JoseMiguelRuizMata/Level_Design/Parkour_Design
+MRUItem3=/Game/_Developers/JoseMiguelRuizMata/Level_Design/Materials/M_ElectricStrike
+MRUItem4=/Game/_Developers/JoseMiguelRuizMata/Level_Design/Labyrinth_Design
+MRUItem5=/Game/_Developers/JoseMiguelRuizMata/Level_Design/CelestialSearch_LevelDesign
+MRUItem6=/Game/PaulAnds/PlatformTesting
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1267,4 +1285,179 @@ BP_FallingPlat_C.Physics=True
 BP_FallingPlat_C.Networking=True
 BP_FallingPlat_C.Input=True
 BP_FallingPlat_C.Actor=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.NotVisible=True
+PreviewMaterial.Nanite=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionScalarParameter.CustomPrimitiveData=True
+MaterialExpressionStaticBoolParameter.General=True
+MaterialExpressionStaticBoolParameter.MaterialExpressionStaticBoolParameter=True
+MaterialExpressionStaticBoolParameter.MaterialExpression=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
+MaterialExpressionNoise.MaterialExpressionNoise=True
+MaterialExpressionNoise.MaterialExpression=True
+MaterialExpressionAppendVector.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.CustomPrimitiveData=True
+MaterialExpressionVectorParameter.ParameterCustomization=True
+BP_MovingPlat_C.Default=True
+BP_MovingPlat_C.Tick=True
+BP_MovingPlat_C.Replication=True
+BP_MovingPlat_C.Rendering=True
+BP_MovingPlat_C.Collision=True
+BP_MovingPlat_C.Actor=True
+BP_MovingPlat_C.Input=True
+BP_MovingPlat_C.HLOD=True
+BP_MovingPlat_C.Physics=True
+BP_MovingPlat_C.WorldPartition=True
+BP_MovingPlat_C.Events=True
+K2Node_Timeline.GraphNodeDetail=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Networking=True
+StaticMeshActor.Actor=True
+BP_WavePlat_C.TransformCommon=True
+BP_WavePlat_C.Rendering=True
+BP_WavePlat_C.Replication=True
+BP_WavePlat_C.Collision=True
+BP_WavePlat_C.HLOD=True
+BP_WavePlat_C.Physics=True
+BP_WavePlat_C.Networking=True
+BP_WavePlat_C.Input=True
+BP_WavePlat_C.Actor=True
+BP_PulsePlat_C.TransformCommon=True
+BP_PulsePlat_C.Rendering=True
+BP_PulsePlat_C.Replication=True
+BP_PulsePlat_C.Collision=True
+BP_PulsePlat_C.HLOD=True
+BP_PulsePlat_C.Physics=True
+BP_PulsePlat_C.Networking=True
+BP_PulsePlat_C.Input=True
+BP_PulsePlat_C.Actor=True
+BP_MovingPlat_C.TransformCommon=True
+BP_MovingPlat_C.Networking=True
+BP_MovingPlat1_C.TransformCommon=True
+BP_MovingPlat1_C.Rendering=True
+BP_MovingPlat1_C.Replication=True
+BP_MovingPlat1_C.Collision=True
+BP_MovingPlat1_C.HLOD=True
+BP_MovingPlat1_C.Physics=True
+BP_MovingPlat1_C.Networking=True
+BP_MovingPlat1_C.Input=True
+BP_MovingPlat1_C.Actor=True
+BP_MovingPlat2_C.TransformCommon=True
+BP_MovingPlat2_C.Rendering=True
+BP_MovingPlat2_C.Replication=True
+BP_MovingPlat2_C.Collision=True
+BP_MovingPlat2_C.HLOD=True
+BP_MovingPlat2_C.Physics=True
+BP_MovingPlat2_C.Networking=True
+BP_MovingPlat2_C.Input=True
+BP_MovingPlat2_C.Actor=True
+BP_MovingPlat3_C.TransformCommon=True
+BP_MovingPlat3_C.Rendering=True
+BP_MovingPlat3_C.Replication=True
+BP_MovingPlat3_C.Collision=True
+BP_MovingPlat3_C.HLOD=True
+BP_MovingPlat3_C.Physics=True
+BP_MovingPlat3_C.Networking=True
+BP_MovingPlat3_C.Input=True
+BP_MovingPlat3_C.Actor=True
+BP_Platform_C.TransformCommon=True
+BP_Platform_C.Rendering=True
+BP_Platform_C.Replication=True
+BP_Platform_C.Collision=True
+BP_Platform_C.HLOD=True
+BP_Platform_C.Physics=True
+BP_Platform_C.Networking=True
+BP_Platform_C.Input=True
+BP_Platform_C.Actor=True
+BP_PulsePlat3_C.TransformCommon=True
+BP_PulsePlat3_C.Rendering=True
+BP_PulsePlat3_C.Replication=True
+BP_PulsePlat3_C.Collision=True
+BP_PulsePlat3_C.HLOD=True
+BP_PulsePlat3_C.Physics=True
+BP_PulsePlat3_C.Networking=True
+BP_PulsePlat3_C.Input=True
+BP_PulsePlat3_C.Actor=True
+BP_PulsePlat4_C.TransformCommon=True
+BP_PulsePlat4_C.Rendering=True
+BP_PulsePlat4_C.Replication=True
+BP_PulsePlat4_C.Collision=True
+BP_PulsePlat4_C.HLOD=True
+BP_PulsePlat4_C.Physics=True
+BP_PulsePlat4_C.Networking=True
+BP_PulsePlat4_C.Input=True
+BP_PulsePlat4_C.Actor=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.HLOD=True
+Actor.Physics=True
+Actor.Networking=True
+Actor.Input=True
+Actor.Actor=True
+BP_MovingPlat4_C.Default=True
+BP_MovingPlat4_C.Tick=True
+BP_MovingPlat4_C.Replication=True
+BP_MovingPlat4_C.Rendering=True
+BP_MovingPlat4_C.Collision=True
+BP_MovingPlat4_C.Actor=True
+BP_MovingPlat4_C.Input=True
+BP_MovingPlat4_C.HLOD=True
+BP_MovingPlat4_C.Physics=True
+BP_MovingPlat4_C.WorldPartition=True
+BP_MovingPlat4_C.Events=True
+BP_MovingPlat4_C.TransformCommon=True
+BP_MovingPlat4_C.Networking=True
+
+[PlacementMode]
+RecentlyPlaced=/Game/PaulAnds/BluePrints/BP_PulsePlat3.BP_PulsePlat3;
+RecentlyPlaced=/Game/PaulAnds/BluePrints/BP_PulsePlat4.BP_PulsePlat4;
+RecentlyPlaced=/Game/PaulAnds/BluePrints/BP_MovingPlat4.BP_MovingPlat4;
+RecentlyPlaced=/Game/PaulAnds/BluePrints/BP_MovingPlat.BP_MovingPlat;
+RecentlyPlaced=/Game/PaulAnds/BluePrints/BP_WavePlat.BP_WavePlat;
+RecentlyPlaced=/Game/PaulAnds/BluePrints/BP_PulsePlat2.BP_PulsePlat2;
+RecentlyPlaced=/Game/PaulAnds/BluePrints/BP_PulsePlat1.BP_PulsePlat1;
+RecentlyPlaced=/Game/PaulAnds/BluePrints/BP_PulsePlat.BP_PulsePlat;
+RecentlyPlaced=/Game/PaulAnds/BluePrints/BP_Platform.BP_Platform;
+RecentlyPlaced=/Game/PaulAnds/BluePrints/BP_MovingPlat3.BP_MovingPlat3;
+RecentlyPlaced=/Game/PaulAnds/BluePrints/BP_MovingPlat2.BP_MovingPlat2;
+RecentlyPlaced=/Game/PaulAnds/BluePrints/BP_MovingPlat1.BP_MovingPlat1;
+RecentlyPlaced=/Game/PaulAnds/BluePrints/BP_FallingPlat.BP_FallingPlat;
 
