--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -183,6 +183,8 @@ GlobalAssetPicker.ThumbnailSize=2
 GlobalAssetPicker.CurrentViewType=0
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSize=2
+ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Level/Main
@@ -207,7 +209,7 @@ StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SkyAtmosphere="\"Object.Atmosphere.SkyAtmosphereComponent.Object.RayleighScattering\" "
-Info=
+Info="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
@@ -232,6 +234,12 @@ MaterialExpressionStaticBoolParameter="\"Object\" "
 MaterialExpressionStaticSwitchParameter="\"Object\" "
 MaterialExpressionLinearInterpolate="\"Object\" "
 MaterialExpressionVectorParameter="\"Object\" "
+ExponentialHeightFog="\"Object\" "
+SkyLight="\"Object\" "
+LandscapeEditorObject="\"Object\" "
+LandscapeGizmoRenderComponent="\"Object\" "
+CapsuleComponent="\"Object\" "
+ShapeComponent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1523,16 +1531,85 @@ PropertyWrapper.DefaultValueCategory=True
 PropertyWrapper.Variable=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
+LandscapeEditorObject.New Landscape=True
+LandscapeEditorObject.LandscapeEditor=True
+LandscapeEditorObject.Tool Settings=True
+LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Edit Layers=True
+LandscapeEditorObject.Edit Layer Blueprint Brushes=True
+LandscapeEditorObject.Target Layers=True
+LandscapeGizmoActiveActor.TransformCommon=True
+LandscapeGizmoActiveActor.LandscapeGizmoActiveActor=True
+LandscapeGizmoActiveActor.Gizmo=True
+LandscapeGizmoActiveActor.Rendering=True
+LandscapeGizmoActiveActor.Replication=True
+LandscapeGizmoActiveActor.Collision=True
+LandscapeGizmoActiveActor.HLOD=True
+LandscapeGizmoActiveActor.Physics=True
+LandscapeGizmoActiveActor.Networking=True
+LandscapeGizmoActiveActor.Input=True
+LandscapeGizmoActiveActor.Actor=True
+Landscape.TransformCommon=True
+Landscape.Information=True
+Landscape.WorldPartition=True
+Landscape.Landscape=True
+Landscape.LOD=True
+Landscape.Nanite=True
+Landscape.LOD Distribution=True
+Landscape.Lighting=True
+Landscape.VirtualTexture=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HLOD=True
+Landscape.Replication=True
+Landscape.Networking=True
+Landscape.Input=True
+Landscape.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.Physics=True
+PlayerStart.Networking=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bShowGrid=False
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
+[LandscapeEdit]
+PaintToolStrength=0.300000012
+PaintBrushRadius=2048
+PaintBrushFalloff=0.5
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200
+bUseFlattenTarget=False
+FlattenTarget=0
+TerraceSmooth=9.99999975e-05
+TerraceInterval=1
+RampWidth=2000
+RampSideFalloff=0.400000006
+bCombinedLayersOperation=True
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=
+ImportLandscape_AlphamapType=0
+ShowUnusedLayers=True
+
+[DetailCustomWidgetExpansion]
+LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+
 [SelectionDetails]
 PreserveScaleRatio=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/Level/Skybox/BP_Space_Sky_Sphere.BP_Space_Sky_Sphere;
 RecentlyPlaced=/Script/Engine.ExponentialHeightFog;/Engine/Transient.ActorFactoryExponentialHeightFog_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
