--- a/Saved/Config/WindowsEditor/Engine.ini
+++ b/Saved/Config/WindowsEditor/Engine.ini
@@ -76,3 +76,6 @@ StickyKeysConfirmation=True
 ToggleKeysConfirmation=True
 FilterKeysConfirmation=True
 
+[/Script/UnrealEd.EditorEngine]
+FlipNormalMapGreenChannel=False
+
